# lean-grep-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: benchmark.csv  benchmark.jsonl  benchmark.v2_pfr_only.jsonl  id_migration_v1_to_v2.json  queries.jsonl  queries_audit.md
data/corpus/: build_manifest.json  build_manifest.schema.json  build_manifest.v1.json  pfr_declarations.jsonl  pnt_declarations.jsonl
data/corpus/v2/: pfr__local.jsonl  pnt__local.jsonl
data/pfr/: benchmark.jsonl  benchmark_audit.md  benchmark_rejected.jsonl  proof_steps.jsonl
data/pnt/: benchmark_audit.md  benchmark_rejected.jsonl  queries.jsonl  queries_audit.md
results/run-001/: metrics.json  predictions.jsonl  results.md
results/run-002-byteequiv/: metrics.json  predictions.jsonl  results.md
scripts/: check_v2_scenarios.py  convert_benchmark.py  mathlib_jaccard.py  regen_v2_ids.py
scripts/remote/: RUNBOOK.md  remote_trace_pfr.py  requirements.txt  smoke_trace.py  smoke_trace_pfr.py  trace_repo.py
scripts/remote/v2/: smoke_trace.py  trace_repo.py
src/leangrep_bench/: benchmark_export.py  cli.py  llm.py
tests/: test_adapters.py  test_convert_benchmark.py  test_corpus_manifest.py  test_corpus_manifest_v2.py  test_corpus_model.py  test_dojo_load.py  test_dojo_model.py  test_dojo_summarize.py  test_eval.py  test_external_adapters.py  test_extract_extractor.py  test_extract_head_premise.py  test_extract_index.py  test_extract_model.py  test_extract_state_parser.py  test_generate.py  test_parser.py  test_scenarios_v2.py  test_scenarios_v2_regression.py  test_smoke.py  test_to_additive.py  test_v2_byte_equivalence.py  test_verify.py  test_verify_ids.py
tests/fixtures/: dojo_trace_sample.jsonl  sample.lean
(+41 files in other folders)
